Rides (#64)
Added endpoint for posting locations
