# src/Ride/Routes.ts
@@ -1,8 +1,21 @@
-// import express from 'express';
-// import { GeoHarsh } from './Controller';
+import express from 'express';
+import {
+  RiderCancelRide,
+  RiderPostLocation,
+  UserCancelRide,
+  UserGetNearbyRides,
+  UserRequestRide,
+} from './Controller';
+import { auth } from '../helpers/CreateToken';
+import { validateLatLong } from './Validator';
+const riderEdit = [auth, validateLatLong];
 
-// const router = express.Router();
-// // router.post('', CustomerCareAgent);
-// router.get('/location', GeoHarsh);
+const router = express.Router();
 
-// export default router;
+router.post('/rider-post-locations/', riderEdit, RiderPostLocation);
+router.post('/user-get-nearby-riders/', riderEdit, UserGetNearbyRides);
+router.post('/user-request-ride/', UserRequestRide);
+router.post('/user-cancel-ride/', UserCancelRide);
+router.post('/rider-cancel-ride/', RiderCancelRide);
+
+export default router;
